some service refactor
