# Platfrom-UI-01/src/openapi/openapi.json
@@ -371,6 +371,60 @@
         }
       }
     },
+    "/postes/AllPostes": {
+      "get": {
+        "tags": [
+          "poste-controller"
+        ],
+        "operationId": "getAllPostes",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PosteResponse"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/offres/{id}/name": {
+      "get": {
+        "tags": [
+          "Offres"
+        ],
+        "operationId": "getOffreName",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/offres/recruter": {
       "get": {
         "tags": [
